# ectf-2025-rust

./: .gitignore  Cargo.toml  README.md  autoAttack.sh  board.cfg  memory.x  openocd.gdb  program.elf
decoder/libectf/: Cargo.toml
decoder/libectf/src/: frame.rs  key.rs  lib.rs  masks.rs  subscription.rs
decoder/main/: Cargo.toml  build.rs
decoder/main/.cargo/: config.toml
decoder/main/src/: decode.rs  flash.rs  keys.rs  list.rs  main.rs  subscribe.rs
design/: pyproject.toml  setup.py
design/ectf25_design/: __init__.py  gen_subscription.py  keygen_test.py
design/ectf25_design/wheels/: ectf25_design_rs-0.1.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  (+1 more)
ectf25_design_rs/: .rustc_info.json  Cargo.toml  build_wheels.sh  pyproject.toml
ectf25_design_rs/src/: lib.rs
ectf25_design_rs/wheels/: ectf25_design_rs-0.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.1.0-cp311-cp311-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl  ectf25_design_rs-0.1.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.1.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.1.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.1.0-cp313-cp313-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.1.0-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.1.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.1.0-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.1.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.2.0-cp311-cp311-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl  ectf25_design_rs-0.2.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.2.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.2.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.2.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.2.0-cp313-cp313-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.2.0-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.3.0-cp311-cp311-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl  ectf25_design_rs-0.3.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.3.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.3.0-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.3.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ectf25_design_rs-0.3.0-cp313-cp313-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  ectf25_design_rs-0.3.0-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
main/: Cargo.toml
main/.cargo/: config.toml
main/src/: main.rs
main/src/uart/: body_rw.rs  mod.rs  rw.rs  (+2 more)
(+39 files in other folders)
