[package]
name = "ectf25_design_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ectf25_design_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
libectf = { path = "../decoder/libectf" }
rkyv = { version = "0.8.10", features = ["alloc", "little_endian"], default-features = false }
rsa = { version = "0.9.7", features = ["sha2"], default-features = false }
rand = "0.8.0"
