[package]
name = "libectf"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
aes = "0.8.4"
cipher = "0.4.4"
sha2 = { version = "0.10.8", default-features = false }
rkyv = { version = "0.8.10", features = ["alloc", "little_endian"], default-features = false }
rsa = { version = "0.9.7", features = ["sha2"], default-features = false }
