[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
libectf = { path = "../libectf" }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-sp", "set-vtor"] }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
max7800x-hal = { version = "0.7.0", features = ["rt", "flashprog-linkage"] }
panic-halt = "1.0.0"
rand = { version = "0.8.5", default-features = false }
rkyv = { version = "0.8.10", features = ["alloc", "little_endian"], default-features = false }
embedded-alloc = "0.6.0"
sha2 = { version = "0.10.8", default-features = false }
rsa = { version = "0.9.7", features = ["sha2"], default-features = false }
aes = "0.8.4"
hmac = "0.12.1"

[build-dependencies]
quote = "1.0.38"
libectf = { path = "../libectf" }
rsa = { version = "0.9.7", features = ["sha2"], default-features = false }
anyhow = "1.0.95"
